WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44922
[Chromium] bindTexture(TEXTURE_CUBE_MAP) shouldn't generate errors with valid cubemap texture
https://bugs.webkit.org/show_bug.cgi?id=44922
Summary
[Chromium] bindTexture(TEXTURE_CUBE_MAP) shouldn't generate errors with valid...
Zhenyao Mo
Reported
2010-08-30 18:59:13 PDT
It's due to the code to set TEXTURE_WRAP_R to CLAMP_TO_EDGE. Remove it for now.
Attachments
patch
(3.92 KB, patch)
2010-08-30 19:08 PDT
,
Zhenyao Mo
kbr
: review+
zmo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-08-30 19:08:18 PDT
Created
attachment 66000
[details]
patch
Kenneth Russell
Comment 2
2010-08-31 10:28:50 PDT
Comment on
attachment 66000
[details]
patch Looks good to me. r=me
Zhenyao Mo
Comment 3
2010-08-31 11:01:59 PDT
Committed
r66509
: <
http://trac.webkit.org/changeset/66509
>
WebKit Review Bot
Comment 4
2010-09-01 00:03:22 PDT
http://trac.webkit.org/changeset/66509
might have broken Leopard Intel Debug (Tests) The following changes are on the blame list:
http://trac.webkit.org/changeset/66505
http://trac.webkit.org/changeset/66506
http://trac.webkit.org/changeset/66507
http://trac.webkit.org/changeset/66508
http://trac.webkit.org/changeset/66509
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug